# agent-settlement-protocol

./: .env.example  .gitignore  CLAUDE.md  INTERFACES.md  LICENSE  README.md  SECURITY.md  hardhat.config.ts  package-lock.json  package.json  railway.toml  tsconfig.json
.claude/agents/: docs-updater.md  sdk-dev.md  security-reviewer.md  (+1 more)
agents/: evaluator-daemon.ts  forum-watcher.ts
api/: package-lock.json  package.json  tsconfig.json
deployments/: base-sepolia.json  hardhat.json
docs/: BASE_GRANT_APPLICATION.md  CEREMONY.md  EVALUATOR.md  TOKENOMICS.md  evaluator-starter-kit.ts
scripts/: cancel-pending.ts  ceremony.ts  chainState.ts  checkBalance.ts  checkBalances.ts  checkBridge.ts  checkDeployerStake.ts  checkEligibility.ts  checkEval2.ts  checkEvaluators.ts  checkJob.ts  checkJob3.ts  checkJobsAndEvaluators.ts  checkReady.ts  checkState.ts  checkThoughtProof.ts  checkVRT.ts  completeAsEval2.ts  completeJob.ts  createJobForEvaluator.ts  demo.ts  deploy.ts  diagJob.ts  e2eTestPablocactus.ts  executeBridgeOnly.ts  executeGovernance.ts  executeReputationBridge.ts  fundExistingJob.ts  fundSecondEvaluator.ts  manualFund.ts  mintVRT.ts  monitor.ts  seedAgents.ts  sendEth.ts  setWarmupPeriod.ts  stakeEvaluator.ts  stakeSecondEvaluator.ts  testAutoAssign.ts  testJobWatcher.ts  testnetSetup.ts  (+1 more)
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/asp_sdk/: __init__.py  autogen_tool.py  client.py  crewai_tool.py  errors.py  langgraph_tool.py  types.py
typechain-types/: hardhat.d.ts  index.ts
(+95 files in other folders)
